k8s/celery-workers-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.prod.yml
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: celery-workers
  name: celery-workers
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: celery-workers
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.prod.yml
        kompose.version: 1.22.0 (955b78124)
      creationTimestamp: null
      labels:
        io.kompose.network/proxynet: "true"
        io.kompose.service: celery-workers
    spec:
      containers:
        - args:
            - ./docker/application/celery/worker.sh
          image: davydovsky/video-archive:web-latest
          imagePullPolicy: Always
          livenessProbe:
            exec:
              command:
                - ./docker/application/celery/worker_helthcheck.sh
            failureThreshold: 3
            periodSeconds: 60
            timeoutSeconds: 20
          name: celery-workers
          resources: {}
          volumeMounts:
            - mountPath: /var/www/video_archive/media
              name: django-media
            - mountPath: /var/www/video_archive/static
              name: django-static
            - mountPath: /code/locale
              name: django-locale
      restartPolicy: Always
      volumes:
        - name: django-media
          persistentVolumeClaim:
            claimName: django-media
        - name: django-static
          persistentVolumeClaim:
            claimName: django-static
        - name: django-locale
          persistentVolumeClaim:
            claimName: django-locale
status: {}
