k8s/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.prod.yml
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: web
  name: web
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: web
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.prod.yml
        kompose.version: 1.22.0 (955b78124)
      creationTimestamp: null
      labels:
        io.kompose.network/proxynet: "true"
        io.kompose.service: web
    spec:
      containers:
        - args:
            - ./docker/application/uwsgi.sh
          image: davydovsky/video-archive:web-latest
          imagePullPolicy: Always
          livenessProbe:
            exec:
              command:
                - |
                  /usr/bin/test $(
                    /usr/bin/curl --fail http://127.0.0.1:8000/health/?format=json
                    --write-out "%{http_code}" --silent --output /dev/null
                  ) -eq 200
            failureThreshold: 5
            initialDelaySeconds: 30
            periodSeconds: 60
            timeoutSeconds: 5
          name: web
          ports:
            - containerPort: 8000
          resources: {}
          volumeMounts:
            - mountPath: /var/www/video_archive/media
              name: django-media
            - mountPath: /var/www/video_archive/static
              name: django-static
            - mountPath: /code/locale
              name: django-locale
      restartPolicy: Always
      volumes:
        - name: django-media
          persistentVolumeClaim:
            claimName: django-media
        - name: django-static
          persistentVolumeClaim:
            claimName: django-static
        - name: django-locale
          persistentVolumeClaim:
            claimName: django-locale
status: {}
