k8s/nginx-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.prod.yml
    kompose.service.expose: "true"
    kompose.service.type: nodeport
    kompose.version: 1.22.0 (955b78124)
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
  creationTimestamp: null
  labels:
    io.kompose.service: nginx
  name: nginx
spec:
  rules:
    - http:
        paths:
          - backend:
              serviceName: nginx
              servicePort: 80
status:
  loadBalancer: {}
