k8s/proxynet-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: proxynet
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/proxynet: "true"
  podSelector:
    matchLabels:
      io.kompose.network/proxynet: "true"
